# ewasm.cdt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bldewasm.sh  cfmt.sh  ewasm.syms
examples/: clear.cpp  main.c  test.c  test1.cpp  testO.c  testfib.cpp  testraw.c
include/: assert.h  byteswap.h  endian.h  ewasm.h  ewasm.hpp
include/ewasm/: ewasm.h  ewasm.hpp
libc/: CMakeLists.txt  malloc.cpp  simple_malloc.cpp
libc/exit/: _Exit.c  assert.c  at_quick_exit.c  atexit.c  quick_exit.c
rt/: CMakeLists.txt  abi.cpp  abi.h  abi_ret.cpp  ashti3.cpp  compiler_builtins.cpp  compiler_builtins.hpp  divti3.cpp  ewasm_main.c  ewasm_main.cpp  ewasm_main.h  lshti3.cpp  memcmp.c  memcmp.cpp  memops.c  memops.cpp  memory.c  memrcpy.c  memrcpy.cpp  modti3.cpp  multi3.cpp  strlen.c  strlen.cpp
src/: CMakeLists.txt  compiler_builtins.cpp  compiler_builtins.hpp  memops.cpp  memory.c
